# Companion_server

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  docker-compose.deploy.yml  migrate.sh  pyproject.toml  start.sh  stop.sh
.github/workflows/: deploy.yml
app/: config.py  db.py  main.py  middleware.py  neo4j_client.py  redis_client.py
app/api/: admin_auth.py  admin_prompts.py  admin_users.py  agents.py  auth.py  boundary.py  chat.py  conversations.py  deps.py  emotions.py  health.py  intimacy.py  jwt_auth.py  memories.py  ownership.py  stickers.py  users.py  ws.py
companion_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jobs/: scheduler.py
prisma/: schema.prisma
scripts/: audit_orphans.py  clear_database.py  debug_color_relevance.py  debug_color_retrieval.py  eval_dedup_ai.py  normalize_memory_types.py  seed_holidays_from_hardcoded.py  seed_stickers.py  split_memory_tables.py  sync_prompts.py  test_dashscope.py
tests/: conftest.py  test_admin_character_profile_delete.py  test_aggregation_workspace_isolation.py  test_api_integration.py  test_apology_sincerity_gate.py  test_boundary.py  test_cache.py  test_character_init.py  test_character_schema_v2.py  test_chat_style.py  test_classify_day_kind.py  test_compute_ai_pad.py  test_context_selector.py  test_convert_profile_contract.py  test_data_fetch_phase.py  test_delayed_queue.py  test_emotion.py  test_fast_fact.py  test_holiday_cache.py  test_holiday_repo.py  test_holiday_sources.py  test_intent_context.py  test_intimacy.py  test_l2_dynamics_workspace_scope.py  test_life_story_event_expansion.py  test_life_story_pipeline.py  test_llm_models.py  test_llm_resilience.py  test_memory.py  test_memory_demographics.py  test_memory_filter.py  test_memory_generation_lock.py  test_memory_init_report.py  test_memory_l1_coverage.py  test_memory_normalization.py  test_memory_ranker.py  test_memory_relevance.py  test_memory_system_integration.py  test_memory_taxonomy.py  test_memory_watermark.py  (+18 more)
(+269 files in other folders)
