[project]
name = "companion-server"
version = "0.1.0"
description = "AI Memory-driven Chat Agent Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "prisma>=0.15.0",
    "redis[hiredis]>=5.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "apscheduler>=3.11.0",
    "bcrypt>=4.2.0",
    "PyJWT>=2.9.0",
    # Part 5 §2.1: 农历转换支持 (春节等动态计算)
    "lunardate>=0.2.2",
    # Part 5 §2.1: NTP 时间校准
    "ntplib>=0.4.0",
    # spec-audit 2026-04-23: 国务院法定假日 + 调休数据 (admin-curated holidays 表的外部源)
    "chinesecalendar>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
